--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -137,6 +137,10 @@ p a:hover {
     color: #000;
 }
 
+p.readMore{
+    text-align: right;
+}
+
 iframe {
     max-width: 100%;
     width: 900px;
@@ -147,12 +151,32 @@ iframe {
     -webkit-overflow-scrolling: touch;
 }
 
-img, canvas, iframe {
-    max-width: 90%;
-    box-sizing: border-box;
-    border-left: 4.5em black solid;
-    padding-left: 2em;
+img {
+    max-width: 72%;
     margin: 1em auto;
+    display: block;
+}
+.vimeo {
+    background: #000;
+    border: none;
+    padding: 1em;
+    display: block;
+    margin: 1em 0;
+}
+
+.mainImage {
+    background: #000;
+    padding: 1em;
+    margin: 1em 0;
+}
+
+.mainImage .vimeo {
+    margin: 0;
+}
+
+.vimeo iframe {
+    margin: auto;
+    display: block
 }
 
 .accent {
@@ -206,7 +230,7 @@ footer a:hover {
     color: #fff;
 }
 
-header, nav, h1, h2, p, img, canvas, iframe, .bordered, input, textarea, select, footer, ul, label {
+header, nav, h1, h2, p, .bordered, input, textarea, select, footer, ul, label {
     transition: border .9s, padding .9s, margin .9s;
     -webkit-transition: border .9s, padding .9s, margin .9s;
 }
@@ -231,11 +255,6 @@ header, nav, h1, h2, p, img, canvas, iframe, .bordered, input, textarea, select,
     p, article ul, label {
         padding: 0 1.485em 1em;
     }
-
-    img, canvas, iframe, .vimeo {
-        border-left: 1.35em black solid;
-        padding-left: 1em;
-    }
 }
 
 @media (min-width: 600px) and (max-width: 1099px) {
@@ -257,10 +276,6 @@ header, nav, h1, h2, p, img, canvas, iframe, .bordered, input, textarea, select,
 
     p, article ul, label {
         padding: 0 3.75em 1em;
-    }
-
-    img, canvas, iframe, .vimeo {
-        border-left: 4.5em black solid;
     }
 }
 
@@ -284,10 +299,6 @@ header, nav, h1, h2, p, img, canvas, iframe, .bordered, input, textarea, select,
     p, article ul, label {
         padding: 0 10.85em 1em;
     }
-
-    img, canvas, iframe, .vimeo {
-        border-left: 13.5em black solid;
-    }
 }
 
 @media (min-width: 1500px) {
@@ -309,11 +320,6 @@ header, nav, h1, h2, p, img, canvas, iframe, .bordered, input, textarea, select,
 
     p, article ul, label {
         padding: 0 18em 1em;
-    }
-
-    img, canvas, iframe, .vimeo {
-        border-left: 22.5em black solid;
-        max-width: 72%;
     }
 }
 
@@ -352,16 +358,3 @@ label input {
     width: 36%;
 }
 
-#title {
-    border-color: #fff;
-    padding-left: 0;
-}
-
-.vimeo {
-    padding-left: 2em;
-}
-
-.vimeo iframe {
-    border: 0;
-    padding: 0;
-}
