added blog, github and linkedin links to navbar

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -72,6 +72,14 @@ nav li {
     margin-right: .5em;
 }
 
+nav li.right {
+    float: right;
+}
+
+nav li.right a {
+    border: 0;
+}
+
 nav a {
     color: #fff;
     text-decoration: none;
